Main goal complete, with Pokemon design (sorry my son is a huge fan)

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,33 @@
-Hello Pokemon Fans today we are going to play The Pokemon Trading Card Game (TCG) with Calyrex but first we are going to play Rock, Paper, Scissors Shoot!
+<style>
+body {
+  background-image: url('https://gameranx.com/wp-content/uploads/2020/10/2020102319304800-3C66B776DB1AA06323037049FACD96D3.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: darkgray;
+  height: 90px;
+  line-height: 90px;
+  text-align: center;
+}
 
-<p>Ready to play!</p>
-<p>Enter your name: 
+div {
+  border-style: solid;
+  border-color: lightblue;
+  background-color: lightblue;
+  width: 300px;
+  margin: auto;
+  position: relative;
+  top: 150%;
+}
+</style>
+
+<body>
+  <h3>Hello Pokemon Fans today we are going to play Rock, Paper, Scissor with Calyrex</h3>
+<div>
+  <h1>Enter your name:</h1>
 <form action="/name" method="post">
-  <input type="text" name="player_name">
-  <input type="submit" value="Let's play!">
+  <p><input type="text" name="player_name"></p>
+  <p><input type="submit" value="Let's play!"></p>
 </form></p>
+</center>
+</body>
+</div>
