--- a/views/result.erb
+++ b/views/result.erb
@@ -22,14 +22,18 @@ div {
 
 <body>
   <div>
+
   <% if @rock %>
+    <h2> You have chosen <%= @rock %> and Calyrex has chose <%= @computer %> </h2>
     <h1><%= @result.play(@rock, @computer) %></h1>
   <% end %>
   <% if @scissor %>
+   <h2> You have chosen <%= @scissor %> and Calyrex has chose <%= @computer %> </h2>
     <h1><%= @result.play(@scissor, @computer) %></h1>
   <% end %> 
   <% if @paper %>
-    <h1><%= @result.play(@paper, @computer) %><h/1>
+    <h2> You have chosen <%= @paper %> and Calyrex has chose <%= @computer %> </h2>
+    <h1><%= @result.play(@paper, @computer) %></h1>
   <% end %>
 
   <form action="/play">
